--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@ window.TriplePixelData={TripleName:"vycjyy-20.myshopify.com",ver:"2.17",plat:"SH
 <body class="body">
   <div class="w-layout-blockcontainer container w-container">
     <div class="w-layout-blockcontainer container-12 hideonplay w-container">
-      <div class="text-block subheader _1"><strong class="bold-text subheader">Top LA Gut Doctor:</strong></div>
-      <div class="text-block header _2"><strong class="bold-text header">“The 10-Second Morning Trick That Eliminates 10 Pounds of Stuck Poop”</strong></div>
+      <div class="text-block subheader _1"><strong class="bold-text subheader">Top Sleep Doctor Explains: </strong></div>
+      <div class="text-block header _2"><strong class="bold-text header">“The Hidden Reason You're Waking Up at 3am:”</strong></div>
     </div>
-    <div class="text-block subheader"><strong class="bold-text subheader">Top LA Gut Doctor:</strong></div>
-    <div class="text-block header"><strong class="bold-text header">“The 10-Second Morning Trick That Eliminates 10 Pounds of Stuck Poop”</strong></div>
+    <div class="text-block subheader"><strong class="bold-text subheader">Top Sleep Doctor Explains: </strong></div>
+    <div class="text-block header"><strong class="bold-text header">“The Hidden Reason You're Waking Up at 3am:”</strong></div>
     <div class="w-layout-blockcontainer container-5 w-container">
       <div class="w-layout-blockcontainer container-6 w-container">
         <div class="code-embed desktop w-embed w-script">
