--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ window.TriplePixelData={TripleName:"vycjyy-20.myshopify.com",ver:"2.17",plat:"SH
         <div class="w-layout-blockcontainer container-10 w-container"><img src="images/Elara-Vance.png" loading="lazy" alt="" class="image">
           <div class="w-layout-blockcontainer container-11 w-container">
             <div class="ginasubheadline"><strong class="bold-text-5"> Top Sleep Doctor 2025 </strong></div>
-            <div class="sh1"><strong class="bold-text-6">Dr. Elaine Morrow M.D</strong></div>
+            <div class="sh1"><strong class="bold-text-6">Dr. Elaine Morrow</strong></div>
           </div>
         </div>
         <div class="t1"><strong>Dr. Elaine Morrow, MD, is a leading Texas sleep doctor and former director of the Grapevine Sleep Study Center</strong>. Over her 20-year career, Dr. Morrow has specialized in treating the root cause of sleeplessness and untimely wakefullness in older adults, with a specific focus in post-menopausal women. <em>Dr. Morrow&#x27;s research has positioned her as an authority in the field of sleep studies in the United States.</em></strong></div>
