--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ window.TriplePixelData={TripleName:"vycjyy-20.myshopify.com",ver:"2.17",plat:"SH
             </div>
           </div>
         </div>
-        <a href="https://lulley.co/pages/sp-1" target="_blank" class="vsl-cta-button w-button"><strong class="bold-text-7">Try Lulley<sup>®</sup>  Now →</strong></a>
+        <a href="https://lulley.co/pages/sp-1" target="_blank" class="vsl-cta-button w-button"><strong class="bold-text-7">Try Lulley Now →</strong></a>
         <link rel="prefetch" href="https://lulley.co/pages/sp-1">
         <div class="w-layout-blockcontainer container-8 w-container"><img src="images/charm_sound.png" loading="lazy" width="Auto" alt="" class="image-4">
           <div class="sh2 sh7"><span><strong class="bold-text-3">IMPORTANT:</strong></span><strong> Your video may take 10 seconds to load. Make sure your sound is on.</strong></div>
@@ -266,7 +266,7 @@ document.addEventListener('DOMContentLoaded', function() {
     // Define your Wistia media IDs for Desktop and Mobile
     const desktopWistiaId = "6btow5cen9"; // Your Desktop Wistia media ID
     const mobileWistiaId = "nt89y4bzbw"; // Your Mobile Wistia media ID
-    const ctaRevealTimestamp = 611; // The timestamp in seconds when the CTA should appear
+    const ctaRevealTimestamp = 535; // The timestamp in seconds when the CTA should appear
     // A flag to ensure the CTA button is only shown once, regardless of which video triggers it
     let buttonAlreadyShown = false;
     // NEW FLAGS: To track if each video has been played for the first time
