--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ window.TriplePixelData={TripleName:"vycjyy-20.myshopify.com",ver:"2.17",plat:"SH
         </div>
       </div>
       <div class="w-layout-blockcontainer container-9 w-container">
-        <div class="w-layout-blockcontainer container-10 w-container"><img src="images/Elara-Vance.png" loading="lazy" alt="" class="image">
+        <div class="w-layout-blockcontainer container-10 w-container"><img src="images/Elaine-Morrow.png" loading="lazy" alt="" class="image">
           <div class="w-layout-blockcontainer container-11 w-container">
             <div class="ginasubheadline"><strong class="bold-text-5"> Top Sleep Doctor 2025 </strong></div>
             <div class="sh1"><strong class="bold-text-6">Dr. Elaine Morrow</strong></div>
