Compressed VSL index.html

--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@ window.TriplePixelData={TripleName:"vycjyy-20.myshopify.com",ver:"2.17",plat:"SH
     <div class="w-layout-blockcontainer container-5 w-container">
       <div class="w-layout-blockcontainer container-6 w-container">
         <div class="code-embed desktop w-embed w-script">
-          <script src="https://fast.wistia.com/embed/medias/6btow5cen9.jsonp" async=""></script>
+          <script src="https://fast.wistia.com/embed/medias/z6q5vo0925.jsonp" async=""></script>
           <script src="https://fast.wistia.com/assets/external/E-v1.js" async=""></script>
           <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
             <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
-              <div class="wistia_embed wistia_async_6btow5cen9 seo=false videoFoam=true" style="height:100%;position:relative;width:100%">
-                <div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/6btow5cen9/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;"></div>
+              <div class="wistia_embed wistia_async_z6q5vo0925 seo=false videoFoam=true" style="height:100%;position:relative;width:100%">
+                <div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/z6q5vo0925/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;"></div>
               </div>
             </div>
           </div>
@@ -294,7 +294,7 @@ ctaButton.addEventListener('click', function() {
         console.log("DEBUG: CTA button with class '.vsl-cta-button' WAS successfully found by JavaScript.");
     }
     // Define your Wistia media IDs for Desktop and Mobile
-    const desktopWistiaId = "6btow5cen9"; // Your Desktop Wistia media ID
+    const desktopWistiaId = "z6q5vo0925"; // Your Desktop Wistia media ID
     const mobileWistiaId = "nt89y4bzbw"; // Your Mobile Wistia media ID
     const ctaRevealTimestamp = 535; // The timestamp in seconds when the CTA should appear
     // A flag to ensure the CTA button is only shown once, regardless of which video triggers it
